--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,36 @@
 version: "3.8"
 
 services:
-  crisis-labs:
-    image: jviou/crisis-labs:latest
-    container_name: crisis-labs
+  crisis-api:
+    build:
+      context: .
+      dockerfile: Dockerfile.api
+    container_name: crisis-api
     restart: unless-stopped
+    environment:
+      - PORT=4000
+      - CRISIS_STATE_DIR=/data
     ports:
-      - "8069:8080"  # 8069 côté host, 8080 dans le conteneur
+      - "4000:4000"
+    volumes:
+      - crisis_state_data:/data
+
+  crisis-frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        VITE_CRISIS_API_URL: ${VITE_CRISIS_API_URL:-http://crisis-api:4000}
+        VITE_DEFAULT_SESSION_ID: ${VITE_DEFAULT_SESSION_ID:-default}
+    container_name: crisis-frontend
+    restart: unless-stopped
+    depends_on:
+      - crisis-api
+    ports:
+      - "8080:8080"
+    environment:
+      - VITE_CRISIS_API_URL=${VITE_CRISIS_API_URL:-http://crisis-api:4000}
+      - VITE_DEFAULT_SESSION_ID=${VITE_DEFAULT_SESSION_ID:-default}
+
+volumes:
+  crisis_state_data:
