--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        VITE_CRISIS_API_URL: http://crisis-api:4000
+        # >>> ID DE SESSION PARTAGÉ ENTRE TOUS LES POSTES <<<
+        VITE_DEFAULT_SESSION_ID: "crisis-session-001"
     container_name: crisis-frontend
     restart: unless-stopped
     depends_on:
