--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        VITE_CRISIS_API_URL: "http://crisis-api:4000"
-        VITE_DEFAULT_SESSION_ID: "crisis-session-001"
+        VITE_CRISIS_API_URL=http://crisis-api:4000
+        VITE_DEFAULT_SESSION_ID=crisis-session-001
     container_name: crisis-frontend
     restart: unless-stopped
     depends_on:
