--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -5,6 +5,10 @@ WORKDIR /app
 COPY package.json ./package.json
 COPY crisis-api-server.js ./crisis-api-server.js
 
+RUN npm install
+
+ENV PORT=4000
+
 ENV PORT=4000
 ENV CRISIS_STATE_DIR=/data
 ENV CRISIS_STATE_FILE=crisis-state.json
