--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,19 @@ services:
   app:
     build: .
     container_name: crisis-app
-    restart: always
+    restart: unless-stopped
     ports:
       - "8080:8080"
     volumes:
       - ./data:/app/data
     environment:
+      - NODE_ENV=production
       - PORT=8080
       - CRISIS_STATE_DIR=/app/data
       - CRISIS_STATE_FILE=session-v2.json
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
