--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,33 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Check for package.json
+      id: check_package
+      run: |
+        if [ -f "package.json" ]; then
+          echo "exists=true" >> $GITHUB_OUTPUT
+        else
+          echo "exists=false" >> $GITHUB_OUTPUT
+        fi
+
     - name: Set up Node.js
+      if: steps.check_package.outputs.exists == 'true'
       uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
 
     - name: Install dependencies
+      if: steps.check_package.outputs.exists == 'true'
       run: npm install
 
     - name: Lint
+      if: steps.check_package.outputs.exists == 'true'
       run: npm run lint --if-present
       continue-on-error: true
 
     - name: Build
+      if: steps.check_package.outputs.exists == 'true'
       run: npm run build --if-present
       continue-on-error: true
       
